--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "this is banarichatApp",
   "main": "index.js",
+ 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -10,8 +11,11 @@
   "author": "banri",
   "license": "ISC",
   "dependencies": {
+    "bufferutil": "^4.0.3",
     "express": "^4.17.1",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "utf-8-validate": "^5.0.5",
+    "ws": "^7.5.0"
   },
   "devDependencies": {},
   "repository": {
@@ -21,5 +25,6 @@
   "bugs": {
     "url": "https://github.com/Smita-cmd/Heroku_Chatapp.github.io/issues"
   },
-  "homepage": "https://github.com/Smita-cmd/Heroku_Chatapp.github.io#readme"
+  "homepage": "https://github.com/Smita-cmd/Heroku_Chatapp.github.io#readme",
+  "keywords": []
 }
